ajout d'un lien vers l'admin de la prez dans le menu

--- a/.htaccess
+++ b/.htaccess
@@ -213,6 +213,7 @@ Options +FollowSymlinks
 # Options +SymLinksIfOwnerMatch
 RewriteEngine On
 RewriteRule ^administrator$ index.php?controller=admin [L]
+RewriteRule ^admin-presentation$ index.php?controller=adminprez [L]
 # RewriteBase /
 
 # ------------------------------------------------------------------------------
